--- a/Hack.py.1
+++ b/Hack.py.1
@@ -1,4 +1,3 @@
-
 #!/usr/bin/python
 # -*- coding: UTF-8 -*-
 
@@ -11,17 +10,17 @@ import datetime
 from base64 import b64decode,b64encode
 from datetime import date
 
-#expirydate = datetime.date(2021, 10, 1)
-expirydate = datetime.date(2021, 8, 30)
+expirydate = datetime.date(2021, 9, 10)
+#expirydate = datetime.date(2021, 8, 30)
 today=date.today()
 def hero():
 
     def chalo():
-        done = True
+        done = False
         #here is the animation
         def animate():
             for c in itertools.cycle(['|', '/', '-', '\\']) :
-                if Good:
+                if done:
                     break
                 sys.stdout.write('\rhacking in the parity server for next colour--------- ' + c)
                 sys.stdout.flush()
@@ -36,11 +35,11 @@ def hero():
         done = True
 
     def chalo1():
-        done = True
+        done = False
         #here is the animation
         def animate():
             for c in itertools.cycle(['|', '/', '-', '\\']):
-                if Good:
+                if done:
                     break
                 sys.stdout.write('\rgetting the colour wait --------- ' + c)
                 sys.stdout.flush()
@@ -66,12 +65,72 @@ def hero():
     y=1
     newperiod=period
     banner='figlet RXCE'
+    thisway=[2,6,8,11,12,15,16,18,19,20]
+    thatway=[1,3,4,5,7,9,10,14,13,17]
+    numbers=[]
+    i=1
+    while(y):
+        clear()
+        system(banner)
+        print("Contact me on telegram @smsn_knt")
+        print("Enter ",newperiod," Parity Price :")
+        current=input()
+        current=int(current)
+        chalo()
+        print("\n---------Successfully hacked the server-----------")
+        chalo1()
+        print("\n---------Successfully got the colour -------------")
+        print('\n')
+        def getSum(n):
+            sum=0
+            for digit in str(n):
+                sum += int(digit)
+            return sum
+        if i in thisway:
+            m=getSum(current)
+            n=int(current)%10
+            if((m%2==0 and n%2==0) or (m%2==1 and n%2==1)):
+                if current in numbers:
+                    print(newperiod+1," : RED")
+                else:
+                    print(newperiod+1," : GREEN")
+            else:
+                if current in numbers:
+                    print(newperiod+1," : GREEN")
+                else:
+                    print(newperiod+1," : RED")
+        if i in thatway:
+            m=getSum(current)+1
+            n=int(current)%10
+            if((m%2==0 and n%2==0) or (m%2==1 and n%2==1)):
+                if current in numbers:
+                    print(newperiod+1,": RED")
+                else:
+                    print(newperiod+1,": GREEN")
+            else:
+                if current in numbers:
+                    print(newperiod+1,": GREEN")
+                else:
+                    print(newperiod+1,": RED")
+        i=i+1
+        newperiod+=1
+        numbers.append(current)
+        y=input("Do you want to play : Press 1 and 0 to exit \n")
+        if(y==0):
+            y=False
+        if (len(numbers)>11):
+            clear()
+            system('figlet Thank you!!')
+            print("Play on next specified time!!")
+            print("-----------Current Time UP----------")
+            sys.exit(" \n \n \n Contact on Telegram @smsn_knt")
+            #print(numbers)
   
 
 
 
 if(expirydate>today):
-    now = datetime.datetime.now(2021, 1, 9)
+    now = datetime.datetime.now()
     First = now.replace(hour=13, minute=55, second=0, microsecond=0)
     Firstend = now.replace(hour=14, minute=35, second=0, microsecond=0)
     Second = now.replace(hour=15, minute=55, second=0, microsecond=0)
@@ -81,8 +140,8 @@ if(expirydate>today):
     Final = now.replace(hour=17, minute=55, second=0, microsecond=0)
     Finalend = now.replace(hour=18, minute=35, second=0, microsecond=0)
 
-    if (True):
-            period=220
+    if (False):
+            period=236
             hero()
     elif(now>First and now<Firstend):
             period=280
@@ -90,17 +149,18 @@ if(expirydate>today):
     elif(now>Third and now<Thirdend):
             period=340
             hero()
-    elif(now>Final and now<Finalend):
+    elif(False):
             period=360
             hero()
     else:
         banner='figlet RXCE'
-        print("Hi!! Thanks for buying the hack")
+        #print("Hi!! Thanks for buying the hack")
+        print("Hi! thanks for trying our DEMO")
         print("----------Your play time-----------")
-        print("1st Sept 2021, 11:00 AM- 11:30 AM")
-        print("1st Sept 2021, 02:00 PM- 02:30 PM")
-        print("1st Sept 2021, 05:00 PM- 05:30 PM")
-        print("1st Sept 2021, 08:00 PM- 08:30 PM")
+        #print("3rd Sept 2021, 11:00 AM- 01:00 AM")
+        #print("3rd Sept 2021, 02:00 PM- 03:00 PM")
+        print("3rd Sept 2021, 11:00 AM- 08:00 PM")
+        #print("3rd Sept 2021, 08:00 PM- 09:00 PM")
         print("Please play on the given time, and ")
         print("If you think it is an error contact")
         print(" admin on telegram @smsn_knt ")
